# olist-ecommerce-client-clustering

./: README.md  pyproject.toml
artifacts/config/: dbscan_umap_config.json
data/processed/: rfms_silent_customers.parquet
notebooks/: 01_eda.ipynb  02_clustering.ipynb  03_cluster_monitoring.ipynb  04_cluster_profiling.ipynb  eda.ipynb
scripts/: download-data.sh
src/: 01_rfms_processing_pipeline.py  02_cluster_rfms.py  03_cluster_monotoring.py
src/olist_ecommerce_client_clustering/: utils.py
tests/: test_model_pipeline.py  test_rfms_processing_pipeline.py
