[project]
name = "olist-ecommerce-client-clustering"
version = "0.1.0"
description = ""
authors = [
    {name = "donatien konan",email = "donatien.konan.pro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "autoviz (>=0.1.905,<0.2.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "duckdb (>=1.4.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "olist_ecommerce_client_clustering", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
