[project]
name = "olist-ecommerce-client-clustering"
version = "0.1.0"
description = "Segmentation des clients d'un site de e-commerce Olist"
authors = [
    {name = "donatien konan",email = "donatien.konan.pro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "autoviz (>=0.1.905,<0.2.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "duckdb (>=1.4.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "pyclustering (>=0.10.1.2,<0.11.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "umap-learn (>=0.5.9.post2,<0.6.0)",
    "hdbscan (>=0.8.40,<0.9.0)",
]

[tool.poetry]
packages = [{include = "olist_ecommerce_client_clustering", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
